--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/TheLegendaryPro/multiplayer-concept#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
+    "openssl": "^1.1.0",
+    "socket.io": "^2.3.0"
   }
 }
