--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "multiplayer-concept",
   "version": "1.0.0",
   "description": "trying to make a multiplayer game",
-  "main": "server.js",
+  "main": "httpserver.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node httpserver.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,8 @@
     "fs": "0.0.1-security",
     "https": "^1.0.0",
     "openssl": "^1.1.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "winston": "^3.3.3"
   },
   "type": "module"
 }
